--- a/portal 2/portal-2.html
+++ b/portal 2/portal-2.html
@@ -19,7 +19,7 @@
         <h1 class="subt">About Me</h1>
         <br>
         <ul>
-            <li>My CV--<a href="d:\web Technology - Copy\my cv\cv.html">click here</a></li>
+            <li>My CV--<a href="D:\Studies\ACN LAB\wt\nila\my cv\CV.html">click here</a></li>
         </ul>
          </ul>
         
@@ -30,13 +30,13 @@
             <h1 class="subt">Lab Exercises</h1>
             <br>
         <ul>
-            <li><a href="C:\Users\azgar\Documents\web Technology\frames\web technology\main_frame.html">Frames In HTML</a></li>
+            <li><a href="D:\Studies\ACN LAB\wt\nila\frames\web technology\main_frame.html">Frames In HTML</a></li>
             <br>
-            <li><a href="C:\Users\azgar\Documents\web Technology\regsteraton form\registeration.html">Register form In HTML</a></li>
+            <li><a href="D:\Studies\ACN LAB\wt\nila\regsteraton form\registeration.html">Register form In HTML</a></li>
             <br>
-            <li><a href="d:\web Technology - Copy\my cv\nila photo.jpg\table.html">Table In HTML</a></li>
+            <li><a href="D:\Studies\ACN LAB\wt\nila\Tables\tabel.html">Table In HTML</a></li>
             <br>
-            <li><a href="C:\Users\azgar\Documents\web Technology\line _html.html">Lines in HTML</a></li>
+            <li><a href="D:\Studies\ACN LAB\wt\nila\line _html.html">Lines in HTML</a></li>
             <br>
         </ul>
          </ul>
